<resources>
    <string name="app_name">Artes Marciais UENF</string>
    <string name="new_post">post</string>
    <string name="your_name">Qual seu nome?</string>
    <string name="user">Usuário</string>
    <string name="phrase">Frase</string>
    <string name="save">Salvar</string>
    <string name="lets_begin">Vamos começar?</string>
    <string name="phrases_all">Todas as frases</string>
    <string name="phrases_motivation">Frases de motivação</string>
    <string name="phrases_morning">Frases para manhã</string>
    <string name="sing_up">Cadastre-se</string>

    <string name="validation_mandatory_name">Informe seu nome.</string>
    <string name="validation_login">Email e/ou Senha inváidos.</string>

    <string name="incorrect_email">Email Incoreto</string>
    <string name="incorrect_password">Senha Incoreta</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registrar">Registrar</string>
    <string name="sobre">Sobre</string>
</resources>