<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DECCF3">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/alegreya_sc"
        android:textColor="@color/dark_purple"
        android:textSize="28sp"
        android:layout_margin="30dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/text_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sing_up"
        android:layout_below="@+id/text_title"
        android:fontFamily="@font/alegreya_sc"
        android:textColor="@color/dark_purple"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>

    <EditText

        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nome completo"
        android:background="@drawable/border"
        android:backgroundTint="@color/white"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:layout_below="@+id/text_signup"

        />

    <EditText

        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:background="@drawable/border"
        android:backgroundTint="@color/white"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:layout_below="@+id/edit_name"/>

    <EditText

        android:id="@+id/edit_email2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_email"
        android:layout_marginTop="15dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/white"
        android:hint="Confirme seu Email"
        android:padding="10dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_email2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/white"
        android:hint="Senha"
        android:padding="10dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/white"
        android:hint="Confirme sua senha"
        android:padding="10dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/text_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Min 8 caracteres, 1 especial e 1 número "
        android:textSize="10dp"
        android:textStyle="bold"
        android:layout_below="@+id/edit_password2"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:backgroundTint="@color/white"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:layout_below="@id/text_rules"
        />




    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_below="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        >

        <RadioButton
            android:id="@+id/radio_professor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Professor"
            android:layout_marginEnd="50dp"
            />

        <RadioButton
            android:id="@+id/radio_aluno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Aluno"
            />




    </RadioGroup>

    <EditText

        android:id="@+id/edit_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Matricula"
        android:background="@drawable/border"
        android:backgroundTint="@color/white"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:layout_below="@+id/radio_group"
        android:visibility="gone"/>



    <Button
        android:id="@+id/button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/edit_register"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/dark_purple"
        android:fontFamily="@font/alegreya_sc"
        android:text="@string/registrar"
        android:textColor="#FFFFFF" />











</RelativeLayout>
</ScrollView>